Dummy_Package_for_scratch_org/main/default/objects/UISection__mdt/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>