Dummy_Package_for_scratch_org/main/default/objects/UISection__mdt/fields/Extension_Package_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Extension_Package_Configuration__c</fullName>
    <label>Extension Package Configuration</label>
    <referenceTo>ExtensionPackageConfiguration__mdt</referenceTo>
    <relationshipLabel>UISections</relationshipLabel>
    <relationshipName>UISections</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>