Dummy_Package_for_scratch_org/main/default/objects/UISection__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>