Dummy_Package_for_scratch_org/main/default/objects/UISection__mdt/fields/WhereIsThisUsed__c.field-meta.xml
<CustomField>
    <fullName>WhereIsThisUsed__c</fullName>
    <label>Where is this used?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>